--- a/frontend/frontend/src/App.css
+++ b/frontend/frontend/src/App.css
@@ -1,8 +1,18 @@
 .App {
   text-align: center;
   display: flex;
-  width: 100vw;
-  height: 100vh;
+  flex-direction: column;
+}
+
+h1 {
+  border: 1px solid #000;
+  margin: 0;
+  padding: 0.5em;
+
+}
+
+.lists {
+  display: flex;
 }
 
 .App-logo {
