--- a/frontend/frontend/src/components/styles/CitiesList.css
+++ b/frontend/frontend/src/components/styles/CitiesList.css
@@ -1,5 +1,5 @@
 #cities-table-wrapper {
-  height: 100%;
+  height: 100vh;
   flex-grow: 1;
   overflow-y: scroll;
 }
@@ -10,6 +10,12 @@ table {
   border-spacing: 0px;
 }
 
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 tr,
 td {
   border: 1px solid rgb(0, 78, 102);
@@ -18,4 +24,7 @@ td {
 th {
   height: 40px;
   font-size: 18px;
+  position: sticky;
+  top: -5px;
+  background-color: #fafafa;
 }
